Repaired Simualtion tests